--- a/src/main/resources/templates/api/searchBook.html
+++ b/src/main/resources/templates/api/searchBook.html
@@ -10,5 +10,10 @@
 </th:block>
 <div layout:fragment="content">
     <h1>도서 검색</h1>
+
+    <form action="/book/search" method="post">
+        <input type="text" placeholder="책 제목을 입력하세요." name="title">
+        <button type="submit" class="btn btn-primary">검색</button>
+    </form>
     <p th:text="${result}"></p>
 </div>
