--- a/src/main/resources/templates/api/searchBook.html
+++ b/src/main/resources/templates/api/searchBook.html
@@ -15,5 +15,11 @@
         <input type="text" placeholder="책 제목을 입력하세요." name="title">
         <button type="submit" class="btn btn-primary">검색</button>
     </form>
-    <p th:text="${result}"></p>
+
+    <table>
+        <tr th:each="t:${titles}">
+            <td th:text="${t.id}"></td>
+            <td th:text="${t.title}"></td>
+        </tr>
+    </table>
 </div>
