회원가입 및 로그인, 로그아웃 기능 구현

--- a/src/main/resources/templates/api/searchBook.html
+++ b/src/main/resources/templates/api/searchBook.html
@@ -36,7 +36,7 @@
                     <p class="card-text" th:text="'저자   '+ ${info.author}"></p>
                 </div>
                 <div class="card-footer text-center">
-                    <small class="text-muted"><a th:href="@{${info.link}}">바로 가기</a></small>
+                    <small class="text-muted"><a th:href="@{${info.link}}">장바구니에 담기</a></small>
                 </div>
             </div>
         </div>
