--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}"
-      charset="utf-8">
+      layout:decorate="~{layouts/layout1}">
 
+<th:block layout:fragment="script">
+  <script th:inline="javascript">
+    $('#myModal').on('shown.bs.modal', function () {
+      $('#myInput').trigger('focus')
+    })
+  </script>
+</th:block>
 
 <div layout:fragment="content">
-  <h1> 상품 등록 페이지입니다.</h1>
+  <form action="/admin/item/new" method="post">
+    <div class="jumbotron">
+      <h1 class="display-4 text-center">도서 검색</h1>
+      <hr class="my-4">
+
+      <div class="input-group mb-3 text-center">
+        <input type="text" class="form-control" placeholder="책 제목을 입력하세요." aria-describedby="button-addon2" name="title">
+
+        <div class="input-group-append">
+          <button class="btn btn-primary" type="submit" id="button-addon2">검색</button>
+        </div>
+      </div>
+    </div>
+  </form>
+
+
+  <form action="/admin/item/add" method="post">
+  <div class="card-group">
+    <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-4" th:each="info, status:${bookInfos}">
+      <div class="card mt-3 h-100">
+        <img class="card-img-top" th:src="${info.imageSrc}" alt="Card image cap">
+        <div class="card-body">
+          <h6 class="card-title" th:text="${info.title}"></h6>
+          <p class="card-text" th:text="'저자   '+ ${info.author}"></p>
+        </div>
+<!--        <div class="card-footer text-center">-->
+<!--          <small class="text-muted"><a th:href="@{${info.link}}">장바구니에 담기</a></small>-->
+<!--        </div>-->
+        <button type="button" class="text-center btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:text="${status.index + 1}">
+          <input type="hidden" th:value="${status.index + 1}" name="id">
+          <small class="text-white">추가하기</small>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+          <div class="modal-body">
+            <label for="customRange1">수량 선택</label>
+            <input type="number" class="ml-3 custom-number" id="customRange1" name="stockNumber">
+          </div>
+          <div class="modal-footer">
+            <button type="reset" class="btn btn-secondary" data-dismiss="modal">취소</button>
+            <button type="submit" class="btn btn-primary">완료</button>
+          </div>
+      </div>
+
+    </div>
+  </div>
+  </form>
+
 </div>
