--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer">
-    <footer class="page-footer font-small cyan darken-3">
-        <div class="footer-copyright text-center py-3">
-            2022 Book Shop WebSite
+    <footer class="py-4 mt-auto">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright: kimjaehee
         </div>
     </footer>
 </div>
