--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,9 +8,10 @@
 <body>
 <div th:fragment="header">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <div class="container px-5">
-            <a class="navbar-brand" href="/">Start Bootstrap</a>
+    <nav class="navbar navbar-expand-lg mb-5">
+        <div class="container">
+            <a class="navbar-brand" href="/" style="color: rgb(103,167,47); font-size:200%;"> <b>Book</b> </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-auto">
@@ -46,13 +47,13 @@
                     <a class="far fa-user fa-2x p-2" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li class="nav-item" sec:authorize="isAnonymous()">
-                        <a class="nav-link" href="/members/login">로그인</a>
+                        <a class="nav-link notBorder" href="/members/login">로그인</a>
                     </li>
                         <li class="nav-item" sec:authorize="isAnonymous()">
-                        <a class="nav-link" href="/members/new">회원가입</a>
+                        <a class="nav-link notBorder" href="/members/new">회원가입</a>
                         </li>
                         <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link" href="/members/logout">로그아웃</a>
+                        <a class="nav-link notBorder" href="/members/logout">로그아웃</a>
                     </li>
                     </div>
                 </span>
